src/App.scss
@use './tabs.scss';
@use './font-size' as *;
@import './colours.scss';

a {
  border: 3px solid transparent;

  &:focus-visible {
    border: 3px solid $rpf-brand-raspberry;
    outline: none;
  }
}

button {
  all: initial;
  border: 3px solid transparent;
  cursor: pointer;

  @extend a;
}

input {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
}

.--light {
  background-color: $rpf-teal-100;
  color: $rpf-text-primary;
  caret-color: $rpf-black;

  .pythonrunner-input {
    color: rgb(36, 103, 236);
  }

  svg {
    fill: $rpf-black;
  }
}

.--dark {
  background-color: $rpf-grey-900;
  color: $rpf-white;
  caret-color: $rpf-white;

  .pythonrunner-input {
    color: rgb(36, 186, 236);
  }

  svg {
    fill: $rpf-white;
  }
}

#app {
  display: flex;
  flex-flow: column;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
  @include font-size-1(regular);
}

html, body, #root, #app {
  overflow: auto;
  height: 100%;
  height: -moz-available;
  height: -webkit-fill-available;
  height: fill-available;
}

